--- a/NetworksAssignment1/NetworksAssignment1.vcxproj.filters
+++ b/NetworksAssignment1/NetworksAssignment1.vcxproj.filters
@@ -27,6 +27,9 @@
     <ClCompile Include="Utilities.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="ClientsHandler.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Server.h">
@@ -42,6 +45,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="resource1.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="ClientsHandler.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
